Fix problem with flexbox spacing on project index.

--- a/app/assets/stylesheets/app/about_me.css.scss
+++ b/app/assets/stylesheets/app/about_me.css.scss
@@ -1,5 +1,5 @@
 #about-me {
-  margin: 2*$gutter-width 0;
+  margin: 2*$gutter-width $margin-width;
   border-top: 1px solid black;
   div {
     display: flex;
