--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -9,7 +9,7 @@ $root-font-size: 14px;
 $h1-font-size: 1.999em;
 $h6-font-size: 1em;
 $container-width: 75vw;
-$max-container-width: 940px;
+$max-container-width: 960px;
 $app-button-color: #d1d2c0;
 $app-button-hover-color: #b4b2b2;
 $app-button-height: 1.999em;
@@ -17,6 +17,7 @@ $app-button-border-radius: 0.5em;
 
 $column-width: 60px;
 $gutter-width: 20px;
+$margin-width: 0.5*$gutter-width;
 
 // Header
 $header-background-color: #f0f3e8;
